# rickshaw

./: CLAUDE.md  README.md  RUNNER_POOL_CHANGES.md  handoff-readme.md  rickshaw-gen-docs  rickshaw-gen-docs.py  rickshaw-index  rickshaw-post-process-bench  rickshaw-post-process-bench.py  rickshaw-post-process-tools  rickshaw-post-process-tools.py  rickshaw-run  rickshaw-run.py  rickshaw-settings.json  rickshaw-source-images  rickshaw-source-images-client  rickshaw-source-images-client.py  workshop.json
endpoints/: base  endpoints.py  osruntime-bootstrap
engine/: bootstrap  bootstrap.py  engine-script  engine-script-library  engine-script-library.py  engine.py  engine_lib.py  partition-cpus.py  workshop.json
rickshaw/: fixup.pm
rickshaw_lib/: schema_fixup.py
schema/: README.md  bench-metric.json  bench-params.json  benchmark.json  crucible-ci.json  image-map.json  kube.json  kvm.json  osp.json  (+11 more)
source-images-service/: SOURCE-IMAGES-SERVICE-OVERVIEW.md  pyproject.toml  requirements.txt
source-images-service/source_images_service/: __init__.py  config.py  main.py
source-images-service/source_images_service/api/v1/: router.py
source-images-service/source_images_service/api/v1/endpoints/: health.py  jobs.py  source_images.py
source-images-service/source_images_service/core/: build_coordinator.py  exceptions.py  file_utils.py  hash_calculator.py  image_sourcer.py  job_manager.py  registry_ops.py  requirements_builder.py  subprocess_runner.py  workshop_runner.py  workspace.py
source-images-service/source_images_service/models/: requests.py  responses.py
(+191 files in other folders)
